# proyek-telematika

./: GPS.ino  README.md
API/: app.py
Backend 2/: data.py  package-lock.json  package.json  script2.js  server.js
Backend 2/public/: index.html  instruksi.txt  script.js
Gmaps/: devgoogle.css  devgoogle.js  index.html  text3.html
config/: dynamic_conf.yaml  static_conf.yaml
kernel_module/km_gpio/user_test/: test.c
kernel_module/km_with_procfs/: km_with_procfs.c
kernel_module/simple_kernel/: simple_km.c
ocr_tts/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ocr.cpp  ocrwebcam.py  output_unfiltered.txt
raspi/: a.out  run.sh  testgpio.cpp
raspi/API/: app.py  app.yaml
raspi/Backend 2/: Open.csv  Readme  data.py  server.js
raspi/Backend 2/public/: index.html  instruksi.txt  script.js
raspi/Gmaps/: devgoogle.css  devgoogle.js  index.html  text3.html
raspi/config/: static_conf.yaml
raspi/kernel_module/km_gpio/: Makefile  km_gpio.c
raspi/kernel_module/km_with_procfs/: Makefile
raspi/kernel_module/simple_kernel/: Makefile
raspi/ocr_tts/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  filtered_output.txt  idwords.txt  ocr  ocr.cpp  ocrwebcam.py  program  test_rs  test_rs.cpp  testopencv  testopencv.cpp  vision_all.cpp
raspi/src/adapter/: CMakeLists.txt  package.xml
raspi/src/adapter/src/: audio_adapter.cpp  web_adapter.cpp
raspi/src/custom_msgs/: CMakeLists.txt  package.xml
raspi/src/vision/: package.xml
raspi/src/vision/src/: gmaps.cpp  image_to_speech.cpp  realsense_main.cpp  vision_capture.cpp
src/adapter/src/: audio_adapter.cpp  hardware_adapter.cpp
src/custom_msgs/msg/: realsense.msg
src/vision/: CMakeLists.txt
src/vision/launch/: vision.launch
src/vision/src/: vision_capture.cpp
